Fix input width on mobile

--- a/ui/src/style.scss
+++ b/ui/src/style.scss
@@ -146,5 +146,6 @@ body {
         font-size: 1.25rem;
         height: 3rem;
         padding: 0 1rem;
+        width: calc(100% - 2rem);
     }
 }
